# file-sorter-by-date

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  cli.py  config.py  core.py  logger.py  utils.py
