[tool.poetry]
name = "file-sorter-by-date"
version = "0.1.0"
description = "Organize files by date using Typer CLI"
authors = ["Dubovitskiy George <gdubovitskiy@ya.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.9.0,<0.10.0"
click = "~8.1.3"
tqdm = "^4.66.0"
python-dotenv = "^1.0.0"
pillow = "^11.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[tool.poetry.scripts]
file-sorter = "src.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"